# backend

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
src/prcontrol/: __init__.py  __main__.py
src/prcontrol/controller/: __init__.py  __main__.py  common.py  config_manager.py  configuration.py  controller.py  device.py  experiment.py  measurements.py  power_box.py  reactor_box.py  state_snapshots.py
src/prcontrol/webapi/: __init__.py  __main__.py  api.py  endpoints.py
tests/: test_api.py  test_config.py  test_config_folder.py  test_experiment.py  test_led.py  test_sensor_observable_api.py
