[project]
name = "prcontrol"
version = "0.1.0"
description = "Control & Data acuisition for Thiele-Labs photochemical reactor"
authors = [
	{name = "Finn Bender"},
	{name = "Henri Dohmen"},
	{name = "Maurice Duchmann"},
	{name = "Omar Halaseh"},
	{name = "Tim Jaeger"},
]
dependencies = ["attrs>=24.2.0", "cattrs>=24.1.2", "flask>=3.1.0", "flask-cors>=5.0.0", "types-flask-cors>=5.0.0.20240902", "tinkerforge>=2.1.31", "types-Flask-SocketIO>=5.4.0.20241002", "flask-socketio>=5.4.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
	"pre-commit>=4.0.1"
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["D417"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pdm.scripts]
check = "ruff check ."
format = "ruff format ."
tests = "pytest -v tests"
mypy = "mypy src/prcontrol"
